<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecioneTamanho"
            android:textSize="@dimen/tamanhoTexto"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/espacoEntre" />

        <RadioGroup
            android:id="@+id/grupoTamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPequena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pequena" />

            <RadioButton
                android:id="@+id/rbMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media" />

            <RadioButton
                android:id="@+id/rbGrande"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grande" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecionePagamento"
            android:layout_marginTop="@dimen/espacoEntre"
            android:textStyle="bold"
            android:textSize="@dimen/tamanhoTexto" />

        <RadioGroup
            android:id="@+id/grupoPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbDinheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinheiro" />

            <RadioButton
                android:id="@+id/rbCartao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartao" />
        </RadioGroup>

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:layout_marginTop="@dimen/espacoEntre"
            android:backgroundTint="@color/laranja"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
