<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/padding_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_resumo"
            android:textSize="@dimen/tamanhoTexto"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/espacoEntre" />

        <TextView
            android:id="@+id/tvSabores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/espacoEntre" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/finalizado"
            android:layout_marginBottom="@dimen/espacoEntre"
            android:contentDescription="@string/img_resumo" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/voltar_inicio"
            android:backgroundTint="@color/laranja"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
